--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,14 @@
 index.main.callout=Bootstrap starter template
+
+#This is the About section
+navbar.about.text=About
+navbar.home.text=Home
+
+#This is the copy section
+copy.h1.text=Who we are
+copy.p.lead=We are community of DevOps engineers who has the goal of helping organisations deliver business value \
+  faster, through technology, while having fun.
+
+copy.project.lead.intro=I am a Senior Software Engineer. I am a Senior Software Engineer. I am a Senior Software Engineer. I am a Senior Software Engineer \
+  I am a Senior Software Engineer. I am a Senior Software Engineer. I am a Senior Software Engineer.I am a Senior Software Engineer.
+copy.viewdetails.button=More Details >>
