--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,8 +1,9 @@
 index.main.callout=Bootstrap starter template
 
-#This is the About section
-navbar.about.text=About
+#This is the Navbar section
 navbar.home.text=Home
+navbar.about.text=About
+navbar.contact.text=Contact Us
 
 #This is the copy section
 copy.h1.text=Who we are
@@ -12,3 +13,12 @@ copy.p.lead=We are community of DevOps engineers who has the goal of helping org
 copy.project.lead.intro=I am a Senior Software Engineer. I am a Senior Software Engineer. I am a Senior Software Engineer. I am a Senior Software Engineer \
   I am a Senior Software Engineer. I am a Senior Software Engineer. I am a Senior Software Engineer.I am a Senior Software Engineer.
 copy.viewdetails.button=More Details >>
+
+# The Contact form section
+contact.h1.text=We value your feedback
+contact.p.lead=Please let us know what you think.
+form.email=E-mail
+form.firstName=First Name
+form.lastName=Last Name
+contact.feedback.form.text=Your feedback
+form.submit=Submit
