--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -4,6 +4,7 @@ index.main.callout=Bootstrap starter template
 navbar.home.text=Home
 navbar.about.text=About
 navbar.contact.text=Contact Us
+navbar.login.text=Log In
 
 #This is the copy section
 copy.h1.text=Who we are
@@ -22,3 +23,10 @@ form.firstName=First Name
 form.lastName=Last Name
 contact.feedback.form.text=Your feedback
 form.submit=Submit
+
+#This is the login form section
+login.h1.text=Please Sign in
+login.p.lead=Please Sign in to access DevOps great features!
+login.username.text=User name
+login.password.text=Password
+
