--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -29,8 +29,12 @@ login.h1.text=Please Sign in
 login.p.lead=Please Sign in to access DevOps great features!
 login.username.text=User name
 login.password.text=Password
+login.error.message=An error occured while logging
+login.error.success=You have succesfully logout
 
 # This is the payload section
 payload.h1.text=You' ve got the juice!
 payload.p.lead=If you can see this page it means you' re logged in.
+navbar.logout.text=Logout
+
 
